# audio_measurement

./: .flake8  .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  404.html  README.md  docker-compose.yml  index.html  main.py  pyproject.toml  requirements.txt  search.html  setup.py  sitemap.xml
.github/workflows/: deploy.yml
audio/: console.py  constant.py  logging.py  plot.py  sampling.py
audio/config/: __init__.py  exception.py  nidaq.py  plot.py  rigol.py  sampling.py  sweep.py  type.py
audio/database/: create_database.sql  db.auth.json.example  db.py
audio/decoder/: xml.py
audio/device/: cdaq.py  (+1 more)
cDAQ/: UsbTmc.py  alghorithm.py  algorithm.py  config.py  console.py  curva.py  include.py  ni.py  plot.py  rigol.py  sampling.py  scpi.py  test.py  timer.py  type.py  usbtmc.py  utility.py
config/: config_template.json  config_template.json5  index.html  machines.json5
configuration/: .gitignore
data/: analysis.data
doc/: Keysight.md  List.md  Rigol DG800 SCPI Programming Documentation.txt  cli.md  database.dot  install.md  output.txt  scpi.md  settings.txt  usb_permission.md
docs/: mkdocs.yml
driver/: ni-rhel7centos7-drivers-2021Q4.rpm  ni-rhel7centos7-drivers-stream.rpm  ni-software-2020-20.1.0.49152-0+f0.el7.noarch.rpm
examples/: index.html
install/: index.html
procedure/: index.html
search/: search_index.json
test/: basic.json
tests/: cl_123.procedure.xml  config_test.json5  multiplot_10Hz_100kHz.procedure.json5  test_algorithm.py  test_cdaq.py  test_config.py  test_fft.py  test_procedure.py
usbTmc/: main.py  utility.py
(+169 files in other folders)
