[tool.poetry]
name = "audio_measurements"
version = "0.1.0"
description = ""
authors = ["Michele Forese <michele.forese.personal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
textual = { git = "https://github.com/Textualize/textual.git", branch="main", python="^3.7"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
